<resources>
    <string name="app_name">E-Commerce</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_search">Search</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_cart">Cart</string>
    <string name="action_manager">Manager</string>
    <string name="action_delete">Delete</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">E-Commerce</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_product">Product</string>
    <string name="menu_help">Help</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Log Out</string>

    <string name="error_field_required">This field is required</string>


    <string name="please_wait">Please Wait</string>
    <string name="authenticating">Authenticating...</string>
    <string name="connecting">Connecting...</string>
    <string name="download">Download...</string>
    <string name="upload">Upload...</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Confirm Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_contact">Enter Contact</string>
    <string name="prompt_rol">Rol</string>
    <string name="prompt_category">Category</string>
    <string name="prompt_birthday">Enter Birthday</string>
    <string name="prompt_is_provider">Is Provider?</string>
    <string name="prompt_is_active">Is Active?</string>
    <string name="prompt_item_code">Enter Item Code</string>
    <string name="prompt_item_name">Enter Item Name</string>
    <string name="prompt_price">Enter Price</string>

    <string name="prompt_name">Enter Name</string>


    <string name="btn_register_now">Register Now</string>
    <string name="btn_forgot">Forgot Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_back">Back</string>
    <string name="btn_register">Register</string>
    <string name="btn_save">Save</string>
    <string name="btn_login_now">Login Now</string>
    <string name="btn_select">Select Multiple Images</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>
    <string name="btn_delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>