<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_search"
            android:orderInCategory="100"
            android:title="@string/action_search"
            app:showAsAction="ifRoom|collapseActionView"
            android:icon="@drawable/ic_menu_action_search"/>
    <item
            android:id="@+id/action_notifications"
            android:orderInCategory="100"
            android:title="@string/action_notifications"
            app:showAsAction="ifRoom|collapseActionView"
            android:icon="@drawable/ic_menu_action_notifications"/>

    <item
            android:id="@+id/action_cart"
            android:orderInCategory="100"
            android:title="@string/action_cart"
            app:showAsAction="always"
            android:icon="@drawable/ic_menu_action_shopping_cart"
            app:actionLayout="@layout/badge_layout"/>

</menu>