<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ui.product.ProductFragmentManager">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideInset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:gravity="center"
                android:theme="@style/AppTheme"
                android:orientation="vertical">

            <Button
                    android:id="@+id/select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.SquadCornerMaterialButton"
                    android:textSize="7sp"
                    android:text="@string/btn_select"/>

            <!--click here to view previous image-->
            <ImageSwitcher
                    android:id="@+id/image"
                    android:layout_width="180dp"
                    android:layout_height="180dp"/>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/previous"
                        android:text="@string/btn_previous"
                        style="@style/AppTheme.SquadCornerMaterialButton"
                        android:textSize="7sp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" "
                        android:textAlignment="center"
                        android:gravity="center|bottom"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/delete"
                        android:text="@string/btn_delete"
                        style="@style/AppTheme.SquadCornerMaterialButton"
                        android:textSize="7sp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" "
                        android:textAlignment="center"
                        android:gravity="center|bottom"/>

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/next"
                        android:text="@string/btn_next"
                        style="@style/AppTheme.SquadCornerMaterialButton"
                        android:textSize="7sp"/>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/itemName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_item_name"
                        android:background="@color/colorOnPrimary"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/filter_spinner_dropdown_bg"
                    app:boxBackgroundColor="@color/colorOnPrimary"
                    android:hint="@string/prompt_category">

                <AutoCompleteTextView
                        android:id="@+id/category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="none"
                        tools:ignore="LabelFor"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_price"
                        android:background="@color/colorOnPrimary"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <CheckBox android:id="@+id/active"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/prompt_is_active"/>

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/save"
                        android:text="@string/btn_save"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:textSize="12sp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="|"
                        android:textAlignment="center"
                        android:gravity="center|bottom"
                        style="@style/AppTheme.RoundedCornerMaterialTextView"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp" android:textSize="25sp"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/back"
                        android:text="@string/btn_back"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:textSize="12sp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>